--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,11 +130,12 @@
     <string name="biometrics_cancel">Cancel</string>
     <string name="biometrics_authentication_error">ERROR: onAuthenticationError: %1$d %2$s</string>
     <string name="biometrics_authentication_failed">ERROR: onAuthenticationFailed</string>
-    <string name="password_entry_highlight_hint">Numbers </string>
+    <string name="password_entry_highlight_hint">Special coloring for numbers </string>
     <string name="password_entry_highlight_hint_l"> lower case </string>
     <string name="preferences_summary_default_user_name">Default username when adding a new password. Completely optional, typically your email address.</string>
     <string name="preferences_title_default_user_name">Default username</string>
     <string name="preferences_clipboard_clear_delay_title">Clipboard clearing timeout</string>
     <string name="preferences_title_clipboard_clear_delay">Clipboard clearing delay</string>
     <string name="preferences_summary_clipboard_clear_delay">Delay in seconds after which clipboard is cleared</string>
+    <string name="password_entry_highlight_space">space</string>
 </resources>
