--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="action_bar_restore">Restore</string>
     <string name="action_bar_search">Search</string>
     <string name="action_bar_settings">Settings</string>
+    <string name="action_bar_import_export"><![CDATA[Export&Import ▶]]></string>
 
     <string name="application_name">Password Safe</string>
 
@@ -144,6 +145,7 @@
     <string name="preferences_summary_clipboard_clear_delay">Delay in seconds after which clipboard is cleared</string>
     <string name="preferences_summary_default_user_name">Default username when adding a new password. Completely optional, typically your email address.</string>
     <string name="preferences_summary_enable_biometrics">Instead of password you can login with biometrics. Password fallback always available. Android will take care of actual biometric authenticatin. Password safe only receives information whether it succeeded or not. Even when enabled you may have to occasionally re-enroll for added security.</string>
+    <string name="preferences_summary_lastback_never_done">No backups yet</string>
     <string name="preferences_summary_lock_when_screen_locks">When android screen lock turns on, password safe will automatically lock</string>
     <string name="preferences_title">Settings</string>
     <string name="preferences_title_automatic_locking_timeout">Automatic locking timeout</string>
@@ -153,5 +155,4 @@
     <string name="preferences_title_enable_biometrics">Enable biometric identification</string>
     <string name="preferences_title_lock_when_screen_locks">Lock when screen locks</string>
     <string name="preferences_title_time_of_last_backup">Time of last backup</string>
-    <string name="preferences_summary_lastback_never_done">never backedup</string>
 </resources>
