Moved OISafe to DFM - some test broken, and notices deficiencs in DFM system esp. bundletool and handling of meta-inf/services (and broken merge)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,4 +161,5 @@
     <string name="preferences_title_time_of_last_backup">Time of last backup</string>
 
     <string name="title_categorypager">Paged Category View</string>
+    <string name="title_oisafeimport">OISafe Import</string>
 </resources>
