--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -110,4 +110,6 @@
     <string name="title_activity_password_screen">Salasananäyttö</string>
     <string name="title_activity_password_search_screen">Salasanan etsintä</string>
     <string name="title_activity_restore_screen">Palauta salasanat</string>
+    <string name="title_categorypager">Sivutettu kategorianäyttö</string>
+    <string name="title_oisafeimport">OISafe salasanojen sisääntuonti</string>
 </resources>
