HIBP as plugin module too, also nifty start of an interface allowing Composabled to be delivered from DFM to main app

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -112,4 +112,5 @@
     <string name="title_activity_restore_screen">Palauta salasanat</string>
     <string name="title_categorypager">Sivutettu kategorianäyttö</string>
     <string name="title_oisafeimport">OISafe salasanojen sisääntuonti</string>
+    <string name="title_hibp">HIBP tuki</string>
 </resources>
