--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -113,4 +113,5 @@
     <string name="title_categorypager">Sivutettu kategorianäyttö</string>
     <string name="title_oisafeimport">OISafe salasanojen sisääntuonti</string>
     <string name="title_hibp">HIBP tuki</string>
+    <string name="preferences_title_make_a_crash">Kaada sovellus</string>
 </resources>
