--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,4 +163,5 @@
     <string name="title_categorypager">Paged Category View</string>
     <string name="title_oisafeimport">OISafe Import</string>
     <string name="title_hibp">HIBP support</string>
+    <string name="preferences_title_make_a_crash">Make application crash</string>
 </resources>
