--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
 
     <!-- login -->
     <string name="login_button">Login</string>
+    <string name="login_button_clear_db">Login/Clear database</string>
     <string name="login_invalid_password">Invalid password</string>
     <string name="login_password_tip">Enter your password</string>
     <string name="login_screen_restore_mark_message">"Looks like Google Automatic backup restored our data around %1$s"</string>
@@ -171,4 +172,6 @@
     <string name="preferences_title_autobackup_started">Google Automatic backup started(perhaps done)</string>
     <string name="preferences_autobackup_restore_started">Google Automatic backup was restored</string>
     <string name="preferences_autobackup_restore_finished">Google Automatic backups\' restore finished</string>
+    <string name="login_anew_button">Discard backup, start fresh</string>
+    <string name="login_anew_retry_button">Try login afterall</string>
 </resources>
